VI-133 user display on mobile

--- a/docroot/themes/custom/site/src/scss/custom/entities/user-profile/teaser/_teaser.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/user-profile/teaser/_teaser.scss
@@ -33,7 +33,8 @@
           clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
           -webkit-clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
           background: rgba($vih-red, 0.75);
-
+          max-width: 242px;
+          
           .field--name-field-vih-user-title {
             bottom: 0;
             right: 5px;
