VI-104 changing title

--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -99,7 +99,7 @@ view_mode ? view_mode|clean_class,
         <div class="col-sm-6">
           {% if content.course_period_start or content.course_period_end %}
           <div class="field field--name-field-vih-course-periods">
-            <div class="field--label">{{ 'Period'|trans }}:</div>
+            <div class="field--label">{{ 'Periode'|trans }}:</div>
             <div class="field__items">
               <div class="clock-icon"><i class="material-icons">access_time</i></div>
               <div class="course-period-wrapper">
