--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -578,6 +578,9 @@
         & a{
           color: white;
           background-color: rgb(0, 128, 175) !important;
+          white-space: normal;
+          line-height: inherit;
+          padding: 25px 0;
           &:hover, &:active {
             background-color: $brand-primary !important;
             color: white;
