--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -580,7 +580,7 @@
           background-color: rgb(0, 128, 175) !important;
           white-space: normal;
           line-height: inherit;
-          padding: 25px 0;
+          padding: 25px 10px;
           &:hover, &:active {
             background-color: $brand-primary !important;
             color: white;
