--- a/docroot/themes/custom/site/templates/paragraphs/paragraph--user-quote.html.twig
+++ b/docroot/themes/custom/site/templates/paragraphs/paragraph--user-quote.html.twig
@@ -18,8 +18,13 @@ view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
         <div class="container">
             {{ content.field_heading }}
             <div class="row">
-                <div class="col-xs-6 col-sm-4 col-md-3">{{ content.field_paragraph_person_photo }}</div>
-                <div class="col-sm-6 col-sm-8 col-md-9">{{ content|without('field_paragraph_person_photo', 'field_heading') }}</div>
+                {% if content.field_paragraph_person_photo %}
+                    <div class="col-xs-6 col-sm-4 col-md-3">{{ content.field_paragraph_person_photo }}</div>
+                    <div class="col-sm-6 col-sm-8 col-md-9">{{ content|without('field_paragraph_person_photo', 'field_heading') }}</div>
+                {% else %}
+                    <div class="col-xs-12">{{ content|without('field_paragraph_person_photo', 'field_heading') }}</div>
+                {% endif %}
+
             </div>
 
         </div>
