VI-144 layout for long course on mobile

--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_full.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_full.scss
@@ -3,7 +3,7 @@
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - article.full
+// | - article.full, layout__news
 // |
 
 // --------------------------------------------------
@@ -46,3 +46,92 @@ article {
     margin-top: 130px;
   }
 }
+
+.layout__news {
+  .node-page-title {
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+// --------------------------------------------------
+// Variants
+// --------------------------------------------------
+
+// --------------------------------------------------
+// Responsive
+// --------------------------------------------------
+
+// Mobile - and up
+@include media-breakpoint-up(xs) {
+
+}
+
+// Mobile - only
+@include media-breakpoint-only(xs) {
+  .layout__news {
+    .breadcrumb {
+      margin-bottom: 10px;
+    }
+  }
+}
+
+// Tablet - and up
+@include media-breakpoint-up(sm) {
+  article {
+    .field {
+      .field--label {
+//        @extend h3;
+      }
+    }
+  }
+
+  .layout__news {
+    .node-page-title {
+      margin-top: 40px;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+// Tablet - only
+@include media-breakpoint-only(sm) {
+
+}
+
+// Desktop - and up
+@include media-breakpoint-up(md) {
+
+}
+
+// Desktop - only
+@include media-breakpoint-only(md) {
+
+}
+
+// Large desktop - and up
+@include media-breakpoint-up(lg) {
+
+}
+
+// Print
+@media print {
+
+}
+
+// Touch
+.touchevents {
+
+}
+
+// No touch
+.no-touchevents {
+
+}
+
+// --------------------------------------------------
+// Mixins
+// --------------------------------------------------
+
+// Breadcrumb mixin
+@mixin breadcrumb-mixin() {}
