--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class.scss
@@ -35,6 +35,22 @@
         position: absolute;
       }
     }
+    .svg-container {
+      display: inline-block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+//      padding-bottom: 100%;
+      vertical-align: middle;
+      overflow: hidden;
+      .svg-content {
+        display: inline-block;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+    }
+
     h5, .field.field--name-name.field--item {
       position:absolute; 
       bottom: 8px;
