--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/radio-selection/_vih_class.scss
@@ -70,37 +70,39 @@ html[lang="da"] .course-periods-accordion .class-selection label.btn-radio-selec
       }
       .field--name-field-vih-class-image {
         position: relative;
-        .triangle {
+        .svg-container-polygon {
+          display: inline-block;
           position: absolute;
           width: 100%;
           height: 100%;
-          clip-path: polygon(0 90%, 100% 30%, 100% 100%, 0% 100%);
-          -webkit-clip-path: polygon(0 90%, 100% 30%, 100% 100%, 0% 100%);
-          background: rgba($vih-red, 0.75);
-          &.color-red {
-            background: rgba($vih-red, 0.75);
-          }
-          &.color-blue {
-            background: rgba($vih-blue, 0.75);
-          }
-          &.color-cyan {
-            background: rgba($vih-cyan, 0.75);
-          }
-          &.color-purple {
-            background: rgba($vih-purple, 0.75);
-          }
-          &.color-yellow {
-            background: rgba($vih-yellow, 0.75);
-          }
-          &.color-green {
-            background: rgba($vih-green, 0.75);
-          }
-          .field--name-name {
-            bottom: 0;
-            right: 5px;
-            text-align: right;
-            width: 100%;
+          vertical-align: middle;
+          overflow: hidden;
+          .svg-content-polygon {
+            display: inline-block;
             position: absolute;
+            top: 0;
+            left: 0;
+            polygon {
+              opacity: 0.75;
+              &.color-red {
+                fill: $vih-red;
+              }
+              &.color-blue {
+                fill: $vih-blue;
+              }
+              &.color-cyan {
+                fill: $vih-cyan;
+              }
+              &.color-purple {
+                fill: $vih-purple;
+              }
+              &.color-yellow {
+                fill: $vih-yellow;
+              }
+              &.color-green {
+                fill: $vih-green;
+              }
+            }
           }
         }
         h5 {
