--- a/docroot/themes/custom/site/src/scss/custom/entities/user-profile/teaser/_teaser.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/user-profile/teaser/_teaser.scss
@@ -29,24 +29,50 @@
         img {
           width: 100%;
         }
-        .triangle {
+        .svg-container-polygon {
+          display: inline-block;
           position: absolute;
           width: 100%;
           height: 100%;
-          clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
-          -webkit-clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
-          background: rgba($vih-red, 0.75);
-          min-width: 242px;
-
-          
-          .field--name-field-vih-user-title {
-            bottom: 0;
-            right: 5px;
-            text-align: right;
-            width: 100%;
+          vertical-align: middle;
+          overflow: hidden;
+          .svg-content-polygon {
+            display: inline-block;
             position: absolute;
+            top: 0;
+            left: 0;
+            polygon {
+              opacity: 0.75;
+              &.color-red {
+                fill: $vih-red;
+              }
+              &.color-blue {
+                fill: $vih-blue;
+              }
+              &.color-cyan {
+                fill: $vih-cyan;
+              }
+              &.color-purple {
+                fill: $vih-purple;
+              }
+              &.color-yellow {
+                fill: $vih-yellow;
+              }
+              &.color-green {
+                fill: $vih-green;
+              }
+            }
           }
         }
+
+        .field--name-field-vih-user-title {
+          bottom: 0;
+          right: 10px;
+          text-align: right;
+          width: 100%;
+          position: absolute;
+        }
+
       }
     }
   }
