--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/field/field--taxonomy-term--field-vih-class-image--vih-class.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/field/field--taxonomy-term--field-vih-class-image--vih-class.html.twig
@@ -39,17 +39,17 @@
  */
 #}
 {% set classes = [
-'field',
-'field--name-' ~ field_name|clean_class,
-'field--type-' ~ field_type|clean_class,
-'field--label-' ~ label_display,
+    'field',
+    'field--name-' ~ field_name|clean_class,
+    'field--type-' ~ field_type|clean_class,
+    'field--label-' ~ label_display,
 ] %}
 {% set title_classes = [
-'field--label',
-label_display == 'visually_hidden' ? 'sr-only',
+    'field--label',
+    label_display == 'visually_hidden' ? 'sr-only',
 ] %}
 
-{% set user = element['#object'] %}
+{% set term = element['#object'] %}
 
 {% if label_hidden %}
     {% if multiple %}
@@ -64,12 +64,12 @@ label_display == 'visually_hidden' ? 'sr-only',
                 <div class="svg-container-polygon">
                     <svg version="1.1" viewBox="0 0 582 700"
                          preserveAspectRatio="xMinYMin meet" class="svg-content-polygon">
-                        <polygon points="0,500 582,400 582,700 0,700" class="color-red"/>
+                        <polygon points="0,600 582,450 582,700 0,700" class="{{ term.field_vih_class_color.value }}" />
                     </svg>
                 </div>
 
-                <h5 class="field field--name-field-vih-user-title field--type-string field--label-hidden field--item f-pale">
-                    {{ user.field_vih_user_title.value }}
+                <h5 class="field field--name-name field--type-string field--label-hidden field--item f-pale">
+                  {{ term.name.value }}
                 </h5>
 
                 {{ item.content }}
