--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/field/field--taxonomy-term--vih-class-table-teaser--field-vih-class-image.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/field/field--taxonomy-term--vih-class-table-teaser--field-vih-class-image.html.twig
@@ -39,14 +39,14 @@
  */
 #}
 {% set classes = [
-    'field',
-    'field--name-' ~ field_name|clean_class,
-    'field--type-' ~ field_type|clean_class,
-    'field--label-' ~ label_display,
+'field',
+'field--name-' ~ field_name|clean_class,
+'field--type-' ~ field_type|clean_class,
+'field--label-' ~ label_display,
 ] %}
 {% set title_classes = [
-    'field--label',
-    label_display == 'visually_hidden' ? 'sr-only',
+'field--label',
+label_display == 'visually_hidden' ? 'sr-only',
 ] %}
 
 {% set term = element['#object'] %}
@@ -61,20 +61,15 @@
     {% else %}
         {% for item in items %}
             <div{{ attributes.addClass(classes, 'field--item') }}>
-                {#<div class="triangle {{ term.field_vih_class_color.value }}"></div>#}
-
-                <div class="svg-container">
-                    <svg version="1.1" viewBox="0 0 582 700"
-                         preserveAspectRatio="xMinYMin meet" class="svg-content">
-                        {#<circle fill="#F7941E" stroke="#231F20" stroke-width="10"#}
-                                {#stroke-miterlimit="10" cx="250" cy="250" r="200" opacity="0.6" />#}
-
-                        <polygon points="0,600 582,450 582,700 0,700" style="fill:lime;opacity: 0.4;"></polygon>
+                <div class="svg-container-polygon">
+                    <svg version="1.1" viewBox="0 0 454 123"
+                         preserveAspectRatio="xMinYMin meet" class="svg-content-polygon">
+                        <polygon points="0,95 454,50 454,123 0,123" class="{{ term.field_vih_class_color.value }}" />
                     </svg>
                 </div>
 
                 <h5 class="field field--name-name field--type-string field--label-hidden field--item f-pale">
-                  {{ term.name.value }}
+                    {{ term.name.value }}
                 </h5>
 
                 {{ item.content }}
