VI-107 event adding price

--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_full.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_full.scss
@@ -21,7 +21,7 @@ article {
     }
   }
   
-  &.vih-long-cource, &.vih-short-course {
+  &.vih-long-cource, &.vih-short-course, &.event {
     .pricing-table {
       thead  {
         background: $gray-lighter;
