--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -398,7 +398,7 @@ tr {
 }
 
 .search-content {
-  padding-top: 100px!important;
+  //padding-top: 100px!important;
   min-height: 100vh;
 }
 
@@ -454,7 +454,7 @@ tr {
 }
 
 .path-soeg .layout__document {
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .table-responsive {
