VI-109 adding paragrapg with classes groups

--- a/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/paragraph/type/_loader.scss
@@ -5,3 +5,4 @@
 @import '_paragraph-type-teacher-class-description';
 @import '_paragraph-type-user-quote';
 @import '_paragraph_type_class_package_accordion';
+@import '_paragraph-type-vih-single-class-group';
