--- a/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_footer.scss
@@ -151,7 +151,7 @@ ul.layout-navigation__link {
 .col-sm-4 button {
     text-transform: uppercase;
 }
-.panel-heading .panel-title a {
+footer .panel-heading .panel-title a {
     color: #FFF;
 }
 .col-xs-12 a {
