--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
@@ -20,7 +20,7 @@
 .vih_class_table_teaser_modal{
   & .field-vih-class-image{
     width: 100%;
-    height: 128px;
+    height: 122px;
     & .field.field--name-name.field--item{
       text-transform: uppercase;
       font-family: 'Open Sans', sans-serif;
@@ -33,11 +33,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 128px;
-    & .field-image-wrapper{
+    height: 122px;
+    & .field-description-wrapper{
       text-transform: uppercase;
       font-weight: bold;
       font-size: 16px;
+      width: 90%;
+    }
+    .btn-more {
+      margin-left: 10px;
+      margin-right: 10px;
     }
   }
   & .modal-dialog{
