--- a/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/full/taxonomy-term--vih-class-package--full.html.twig
@@ -117,7 +117,7 @@ view_mode ? view_mode|clean_class,
         <div class="col-xs-12">
         </div>
       </div>
-    {{ class_list }}
+    {#{{ class_list }}#}
     </div>
   </div>    
   <div class="row paragraphs">
