VI-140 styles for paragraphs on node

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1073,6 +1073,9 @@ flex-direction: column;
 
 .path-node article .field--name-field-paragraphs {
   width: 100%;
+  .field--item:not(:last-child) {
+    margin-bottom: 40px;
+  }
 }
 
 #block-komgodtigang .banner-content .container {
