VI-140 aiming margin at direct children only

--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1073,7 +1073,7 @@ flex-direction: column;
 
 .path-node article .field--name-field-paragraphs {
   width: 100%;
-  .field--item:not(:last-child) {
+  > .field--item:not(:last-child) {
     margin-bottom: 40px;
   }
 }
