VI-139 hiding person contact from subscription page

--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-long-course-order-form.html.twig
@@ -109,6 +109,6 @@
     </div>
 </div>
 
-{{ form['#contact_person']['person'] }}
+{#{{ form['#contact_person']['person'] }}#}
 
 {# Personal data END #}
