--- a/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/taxonomy-term/teaser/_vih_class_table_teaser_modal.scss
@@ -39,6 +39,7 @@
       font-weight: bold;
       font-size: 16px;
       width: 90%;
+      margin-left: 10px;
     }
     .btn-more {
       margin-left: 10px;
