--- a/docroot/themes/custom/site/templates/page/page--page.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--page.html.twig
@@ -24,10 +24,11 @@
       <div class="news-banner" style="background-image: url('{{ file_url(node.field_page_main_image.entity.fileuri) }}');">
 
         {% if node.title.value %}
-          <h1 class="news-banner-title">{{ node.title.value }}</h3>
+          <h1 class="news-banner-title">{{ node.title.value }}</h1>
           {% elseif page['#title'] %}
-            <h1>{{ page['#title'] }}</h3>
-            {% endif %} </div>
+            <h1>{{ page['#title'] }}</h1>
+            {% endif %}
+      </div>
 
             {# Header #}
             {% if page.header %}
@@ -60,12 +61,14 @@
               {% endblock %}
             {% endif %}
 
+            <div class="container">
             {% if node and node.getType == 'page' %}
               {{ page.content|without("field_page_main_image") }}
             {% else %}
               {{ page.content|without("field_page_main_image") }}
-
             {% endif %}
+            </div>
+
             </div>
             <!-- End - content -->
 
