--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -135,9 +135,6 @@ html {
   padding: 0!important;
   margin-bottom: 220px;
 }
-.path-node .field--name-body {
-  margin-bottom: 60px!important;
-}
 .banner {
   overflow: hidden!important;
 }
@@ -372,15 +369,6 @@ h6 {
 .course-supervisor a {
   color: #212121;
   font-size: 14px;
-}
-
-article .field--name-body {
-  margin-bottom: 40px;
-}
-
-article .field--name-body p {
-  margin-bottom: 20px;
-  margin-top: 20px;
 }
 
 tr {
@@ -1057,22 +1045,11 @@ flex-direction: column;
   margin-top: 0;
 }
 
-.path-node article .field--name-body {
-  padding-bottom: 200px;
-  max-width: 1024px;
-  padding: 40px;
-  margin-bottom: 150px;
-  padding-top: 0px;
-}
-
-.page-node-type-vih-long-cource article .field--name-body,
-.page-node-type-vih-short-course article .field--name-body {
-  padding: 0px;
-}
-
-
 .path-node article .field--name-field-paragraphs {
-  width: 100%;
+  width: 100vw;
+  > .field--item:first-child {
+    margin-top: 60px;
+  }
   > .field--item:not(:last-child) {
     margin-bottom: 40px;
   }
@@ -1799,7 +1776,7 @@ div[role=heading] {
   width: 100%;
 }
 
-// Modal 
+// Modal
 .modal {
   background-color:rgba(0, 0, 0, 0.5);;
 }
