VI-133 mobile main menu scroll TEST01

--- a/docroot/themes/custom/site/src/scss/custom/components/_header.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_header.scss
@@ -455,7 +455,7 @@
         height: 70px!important;
       }
       .layout-navigation {
-        overflow: auto;
+        overflow: visible;
         flex-direction: column;
         height: 100%;
         align-items: stretch;
