VI-105 changed the price label

--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -65,7 +65,7 @@
             <thead>
                 <tr>
                     <th>
-                        {{ "Materialegebyr"|trans }}
+                        {{ "Pris pr deltager"|trans }}
                     </th>
                 </tr>
             </thead>
