--- a/docroot/themes/custom/site/src/scss/custom/entities/node/full/_event.scss
+++ b/docroot/themes/custom/site/src/scss/custom/entities/node/full/_event.scss
@@ -10,35 +10,34 @@
 // Variables
 // --------------------------------------------------
 
-
 // --------------------------------------------------
 // Styling
 // --------------------------------------------------
-.view.view-eventside.view-id-eventside.view-display-id-embedded_teaser_list{
-  & article.event.embedded-teaser-list{
-    & .content{
-      & .flexbox-middle{
+.view.view-eventside.view-id-eventside.view-display-id-embedded_teaser_list {
+  & article.event.embedded-teaser-list {
+    & .content {
+      & .flexbox-middle {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-wrap: wrap;
-        & .field_image{
+        & .field_image {
           position: relative;
           width: 100%;
           height: 100%;
-          & .triangle-red{
+          & .triangle-red {
             position: absolute;
-    width: 100%;
-    height: 100%;
-    clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
-    -webkit-clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
-    background: rgba(255, 0, 95, 0.75);
+            width: 100%;
+            height: 100%;
+            clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
+            -webkit-clip-path: polygon(0 90%, 100% 60%, 100% 100%, 0% 100%);
+            background: rgba(255, 0, 95, 0.75);
           }
         }
-        & .field.field--name-body{
+        & .field.field--name-body {
           margin: 0 !important;
           padding: 0 !important;
-          & p{
+          & p {
             color: #888;
             text-transform: unset;
             font-family: "Open Sans", Sens-serif !important;
@@ -46,49 +45,51 @@
             line-height: 18px;
           }
         }
-        & h2 a span{
+        & h2 a span {
           color: #000;
           font-size: 16px;
           font-weight: bold;
           font-family: 'Open Sans', sans-serif;
         }
       }
-      & .views-field.views-field-view-node{
-       display: block;
-       text-align: center;
-       padding: 0;
-       margin-top: 15px;
-       margin-bottom: 15px;
+      & .views-field.views-field-view-node {
+        display: block;
+        text-align: center;
+        padding: 0;
+        margin-top: 15px;
+        margin-bottom: 15px;
       }
-      & .period-wrapper__dates{
+      & .period-wrapper__dates {
         margin-bottom: 15px;
       }
     }
   }
 }
 
-.path-node.page-node-type-event{
+.path-node.page-node-type-event {
   .field--name-body {
     padding: 0;
   }
 
   .period-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+    margin-top: 20px;
     text-align: center;
     padding-top: 25px;
     padding-bottom: 25px;
-    border: 1px solid #eeeeee;
+    border: 1px solid $gray-lighter;
     text-transform: uppercase;
-    .period-wrapper__dates {
-      text-align: left;
-      font-weight: bold;
-      color: #555;
+    font-weight: bold;
+    color: #555;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .field {
+      display: inline-block;
     }
   }
 }
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
@@ -100,70 +101,70 @@
 // Mobile - and up
 @include media-breakpoint-up(xs) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Mobile - only
 @include media-breakpoint-only(xs) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Tablet - and up
 @include media-breakpoint-up(sm) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Tablet - only
 @include media-breakpoint-only(sm) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Desktop - and up
 @include media-breakpoint-up(md) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Desktop - only
 @include media-breakpoint-only(md) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Large desktop - and up
 @include media-breakpoint-up(lg) {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Print
 @media print {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // Touch
 .touchevents {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
 // No touch
 .no-touchevents {
 
-  .path-node.page-node-type-event{
+  .path-node.page-node-type-event {
   }
 }
 
@@ -172,4 +173,5 @@
 // --------------------------------------------------
 
 // Breadcrumb mixin
-@mixin breadcrumb-mixin() {}
+@mixin breadcrumb-mixin() {
+}
