--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -1,94 +1,92 @@
-{%
-  set classes = [
-    node.bundle|clean_class,
-    node.isPromoted() ? 'is-promoted',
-    node.isSticky() ? 'is-sticky',
-    not node.isPublished() ? 'is-unpublished',
-    view_mode ? view_mode|clean_class,
-    'clearfix',
-  ]
-%}
+{% set classes = [
+node.bundle|clean_class,
+node.isPromoted() ? 'is-promoted',
+node.isSticky() ? 'is-sticky',
+not node.isPublished() ? 'is-unpublished',
+view_mode ? view_mode|clean_class,
+'clearfix',
+] %}
 
 <article{{ attributes.addClass(classes) }}>
-<div class="container">
-  {{ title_prefix }}
-  {% if not page %}
-    <h2{{ title_attributes }}>
-      <a href="{{ url }}" rel="bookmark">{{ label }}</a>
-    </h2>
-  {% endif %}
-  {{ title_suffix }}
+  <div class="container">
+    {{ title_prefix }}
+    {% if not page %}
+      <h2{{ title_attributes }}>
+        <a href="{{ url }}" rel="bookmark">{{ label }}</a>
+      </h2>
+    {% endif %}
+    {{ title_suffix }}
 
-{#  {% if display_submitted %}
-    <footer>
-      {{ author_picture }}
-      <div{{ author_attributes.addClass('author') }}>
-        {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
-        {{ metadata }}
-      </div>
-    </footer>
-  {% endif %}#}
-</div>
+    {#  {% if display_submitted %}
+        <footer>
+          {{ author_picture }}
+          <div{{ author_attributes.addClass('author') }}>
+            {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
+            {{ metadata }}
+          </div>
+        </footer>
+      {% endif %}#}
+  </div>
   <div{{ content_attributes.addClass('content') }}>
     {#{{ content }}#}
     <div class="container">
-    <div class="row">
-      <div class="col-xs-12">
-        {{ content.body }}
+      <div class="row">
+        <div class="col-xs-12">
+          {{ content.body }}
+        </div>
       </div>
-    </div>
 
-    <div class="row">
+      <div class="row">
         <div class="col-xs-12">
-            <div class="field field--name-field-vih-course-periods">
-                <div class="field__items">
-                    <div class="clock-icon"><i class="material-icons">access_time</i></div>
-                    <div class="course-period-wrapper">
-                        <div class="field--item">{{ content.field_vih_sc_start_date }} - {{ content.field_vih_sc_end_date }}</div>
-                    </div>
-                </div>
+          <div class="field field--name-field-vih-course-periods">
+            <div class="field__items">
+              <div class="clock-icon"><i class="material-icons">access_time</i></div>
+              <div class="course-period-wrapper">
+                <div class="field--item">{{ content.field_vih_sc_start_date }}
+                  - {{ content.field_vih_sc_end_date }}</div>
+              </div>
             </div>
+          </div>
         </div>
-    </div>
+      </div>
 
-    <div class="row vih-btn-box">
+      <div class="row vih-btn-box">
         <div class="col-xs-12">
-            <a href="{{ url('vih_subscription.short_course_order_create', {'course': node.id}) }} " class="btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
+          <a href="{{ url('vih_subscription.short_course_order_create', {'course': node.id}) }} "
+             class="btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
         </div>
-    </div>
-   
-    <div class="row vih-price-box">
-      <div class="col-xs-12">
-          <h4>{{ "Prisoversigt"|trans }}:</h4>
+      </div>
 
+      <div class="row vih-price-box">
+        <div class="col-xs-12">
           <table class="table table-bordered pricing-table">
             <thead>
-                <tr>
-                    <th>
-                        {{ "Pris pr deltager"|trans }}
-                    </th>
-                </tr>
+            <tr>
+              <th>
+                {{ "Pris pr deltager"|trans }}
+              </th>
+            </tr>
             </thead>
             <tbody>
-              <td>
-                  {{ content.field_vih_sc_price }}
-              </td>
+            <td>
+              {{ content.field_vih_sc_price }}
+            </td>
             </tbody>
           </table>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12">
+          <h4>{{ 'Har du spørgsmal til kurset?'|trans }}</h4>
+          {{ content.field_vih_cs_contact_person }}
+        </div>
       </div>
     </div>
-      
-    <div class="row">
-      <div class="col-xs-12">
-        <h4>{{ 'Har du spørgsmal til kurset?'|trans }}</h4>
-        {{ content.field_vih_cs_contact_person }}
-      </div>
-    </div>
-      </div>
-       </div> 
-    <div class="row paragraphs">
-      {{ content.field_paragraphs }}
-    </div>
+  </div>
+  <div class="row paragraphs">
+    {{ content.field_paragraphs }}
+  </div>
 
 
 </article>
