--- a/docroot/themes/custom/site/templates/page/page--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-short-course.html.twig
@@ -20,7 +20,7 @@
 
     <!-- Begin - content -->
     <div class="layout__content">
-      <div class="news-banner" style="background-image: url('{{ file_url(node.field_vih_sc_image.entity.fileuri) }}');">
+      <div class="news-banner" style="background-image: url('{{ file_url(node.field_page_main_image.entity.fileuri) }}');">
         {% if node.title.value %}
           <h1 class="news-banner-title">{{ node.title.value }}</h1>
         {% elseif page['#title'] %}
@@ -34,32 +34,28 @@
             <div class="angled-background-color angled-background-color-white">
               <div class="angled-background-inner" style="position: unset !important;">
                 <div class="container">
+
                 </div>
               </div>
             </div>
-
-            <div class="container news-container">
-              {{ page.header }}
-              {{ page.breadcrumb }}
-              <hr>
-              {% if node.title.value %}
-                <h3 class="node-page-title">{{ node.title.value }}</h3>
-              {% elseif page['#title'] %}
-                <h3>{{ page['#title'] }}</h3>
-              {% endif %}
-
-              <br>
-            </div>
-            {% if node and node.getType == 'page' %}
-              {{ page.content }}
-            {% else %}
-              {{ page.content }}
-            {% endif %}
           </div>
         {% endblock %}
       {% endif %}
 
-
+      <div class="container news-container">
+        {{ page.header }}
+        {{ page.breadcrumb }}
+        <hr>
+        {% if node.title.value %}
+          <h3 class="node-page-title">{{ node.title.value }}</h3>
+        {% endif %}
+        <br/><br/>
+      </div>
+      {% if node and node.getType == 'page' %}
+        {{ page.content }}
+      {% else %}
+        {{ page.content }}
+      {% endif %}
     </div>
     <!-- End - content -->
 
