--- a/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-long-cource.html.twig
@@ -17,7 +17,7 @@
 
   <!-- Begin - content -->
   <div class="layout__content">
-    <div class="news-banner" style="background-image: url('{{ file_url(node.field_page_main_image.entity.fileuri) }}');">
+    <div class="news-banner" style="background-image: url('{{ file_url(node.field_vih_course_image.entity.fileuri) }}');">
       {% if node.title.value %}
         <h1 class="news-banner-title">{{ node.title.value }}</h1>
       {% elseif page['#title'] %}
@@ -42,11 +42,14 @@
     <div class="container news-container">
       {{ page.header }}
       {{ page.breadcrumb }}
-      <hr>
+      <hr class="hidden-xs">
       {% if node.title.value %}
-        <h3 class="node-page-title">{{ node.title.value }}</h3>
+        <h3 class="node-page-title">{{ node.field_vih_course_heading.value }}</h3>
+        <h5 class="course-subheading">- {{ node.field_vih_course_subheading.value }}</h5>
+      {% elseif page['#title'] %}
+        <h3>{{ node.field_vih_course_heading.value }}</h3>
+        <h5>{{ node.field_vih_course_subheading.value }}</h5>
       {% endif %}
-      <br/><br/>
     </div>
     {% if node and node.getType == 'page' %}
       {{ page.content }}
