--- a/docroot/themes/custom/site/templates/page/page--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/page/page--vih-short-course.html.twig
@@ -20,7 +20,7 @@
 
     <!-- Begin - content -->
     <div class="layout__content">
-      <div class="news-banner" style="background-image: url('{{ file_url(node.field_page_main_image.entity.fileuri) }}');">
+      <div class="news-banner" style="background-image: url('{{ file_url(node.field_vih_sc_image.entity.fileuri) }}');">
         {% if node.title.value %}
           <h1 class="news-banner-title">{{ node.title.value }}</h1>
         {% elseif page['#title'] %}
