--- a/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-short-course.html.twig
@@ -53,7 +53,7 @@ view_mode ? view_mode|clean_class,
       <div class="row vih-btn-box">
         <div class="col-xs-12">
           <a href="{{ url('vih_subscription.short_course_order_create', {'course': node.id}) }} "
-             class="btn-arrow btn-center">{{ "Begynd nu"|trans }}</a>
+             class="btn-arrow btn-center">{{ "Tilmeld"|trans }}</a>
         </div>
       </div>
 
