--- a/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_page-layout.scss
@@ -1038,10 +1038,12 @@ flex-direction: column;
 
 .path-node article .field--name-field-paragraphs {
   width: 100vw;
-  > .field--item:first-child {
+  > .field--item:first-child .angled-background-image,
+  > .field--item:first-child .angled-background-color {
     margin-top: 60px;
   }
-  > .field--item:not(:last-child) {
+  > .field--item:not(:last-child) .angled-background-image,
+  > .field--item:not(:last-child) .angled-background-color {
     margin-bottom: 40px;
   }
 }
@@ -1096,56 +1098,6 @@ flex-direction: column;
 
 div[role=heading] {
   margin-top: 120px;
-}
-
-.views-field-field-vih-course-image .image-with-overlay {
-  height: 100%;
-  overflow: hidden;
-}
-
-.views-field-field-vih-course-image .image-with-overlay {
-  min-height: 150px;
-}
-
-.views-field-field-vih-course-image .image-with-overlay a {
-  color: #fff;
-}
-
-.views-field-field-vih-sc-image .image-with-overlay {
-  height: 100%;
-  overflow: hidden;
-}
-
-.views-field-field-vih-sc-image .image-with-overlay {
-  min-height: 150px;
-}
-
-.views-field-field-vih-sc-image .img-responsive {
-  display: block;
-  max-width: 120%;
-  height: auto;
-}
-
-.view-long-course-list- .view-content {
-  padding-bottom: 200px;
-}
-
-.view-short-course-list- .view-content {
-  padding-bottom: 200px;
-}
-
-.field--name-field-short-course .field--label {
-  display: none;
-}
-
-.field--name-field-long-course .field--label {
-  display: none;
-}
-
-.views-field-field-vih-course-image .img-responsive {
-  display: block;
-  max-width: 120%;
-  height: auto;
 }
 
 .layout__header .layout__header-row--bottom .layout-navigation > .layout-navigation__link.active > a {
