--- a/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
+++ b/docroot/themes/custom/site/src/scss/custom/components/_banner.scss
@@ -16,6 +16,10 @@
 
 // Banner
 
+.banner, .banner-logo {
+  max-height: 90vh!important;
+}
+
 .path-frontpage div[role=heading] {
     
     display: none;
@@ -42,11 +46,7 @@
     
 }
 @media only screen and (max-width: 1260px) {
-  
-    .banner-logo {
-        height: 65vh!important;
-    }
-    .banner {
+    .banner, .banner-logo {
         max-height: 70vh!important;
     }
     .banner .banner-content {
